# CKKSBenchmark

./: .gitignore  10_test_muladd_depth_4096_4_AB_plus_accC.cpp  11_test_muladd_depth_8192_4_ABC_plus_accD.cpp  12_test_square_depth_4096_3_A.cpp  13_test_square_depth_4096_4_A.cpp  14_test_square_depth_8192_4_A.cpp  15_test_neg_depth_4096_3_A.cpp  16_test_neg_depth_4096_4_A.cpp  17_test_neg_depth_8192_4_A.cpp  18_test_rotate_depth_4096_3_A.cpp  19_test_rotate_depth_4096_4_A.cpp  1_kernel_benchmark_expr.cpp  1_test_mul_depth_4096_3_ABC.cpp  20_test_rotate_depth_8192_4_A.cpp  21_test_mulplain_depth_4096_3_A.cpp  22_test_mulplain_depth_4096_4_A.cpp  23_test_mulplain_depth_8192_4_A.cpp  24_test_discriminant_2_4096_4.cpp  25_test_discriminant_2_8192_4.cpp  26_test_add_different_size_4096_3_AB_plus_C.cpp  27_test_add_different_size_8192_4_AB_plus_C.cpp  28_test_add_vs_size_perf_4096_3_AB_plus_C.cpp  2_kernel_benchmark_seal.cpp  2_test_mul_depth_4096_4_ABC.cpp  3_test_mul_depth_8192_4_ABC.cpp  4_test_mul_depth_8192_4_ABCD.cpp  5_test_mul_depth_8192_4_ABCD_ok.cpp  6_test_add_depth_4096_3_accA.cpp  7_test_add_depth_4096_4_accA.cpp  8_performance.cpp  8_test_add_depth_8192_4_accA.cpp  9_test_muladd_depth_4096_3_AB_plus_accC.cpp  CKKSBenchmark.cpp  CMakeLists.txt  README.md  benchmark.h  clk_utils.h  config.h.in  test.h  test_misc.cpp  (+2 more)
